# Mouse-brain

./: .gitignore  LICENSE  Makefile  README.md  gemelo_digital_cerebro_raton.html  informe_critico_proyecto_gemelo_cerebral.md  informe_llm_langgraph_gemelo_cerebral.md  plan_gemelo_digital_cerebro_raton.md  pyproject.toml  run_prototype.py
cognitive_organism/: __init__.py
configs/: acceptance_500.yaml  allen_vbn_phase2.yaml  allen_vbn_phase2b.yaml  allen_vbn_phase2c.yaml  allen_vbn_phase2c_confirmation_sealed.json  allen_vbn_phase4.yaml  allen_visual_phase3.yaml  allen_visual_phase3_confirmation_sealed.json  datasets.json  default.yaml  mouse_level0.json
docs/: ALLEN_CANDIDATE_SELECTION.md  ALLEN_EXPORT_STATUS.md  ALLEN_METADATA_SMOKE_TEST.md  ALLEN_NORMALIZATION.md  ALLEN_REALDATA_BENCHMARK.md  ALLEN_VBN_CLOSURE.md  ARCHITECTURE.md  DATASET_DECISION.md  DATASET_VOLUME_AUDIT.md  DATA_PROVENANCE.md  EXPERIMENT_LOG.md  EXPERIMENT_MANAGEMENT.md  EXPERIMENT_TRACE.md  EXTERNAL_REPLICATION_PROTOCOL.md  FINITE_EXPERIMENT_ROADMAP.md  FRAGILITY_DISCUSSION.md  FUTURE_INTEGRATIONS.md  HYPOTHESES.md  MECHANISTIC_IDENTIFIABILITY_SCORE.md  MICRONS_PILOT_STATUS.md  MOUSEDTB_COMPETITIVE_POSITION.md  NEXT_PHASE_INSTRUCTIONS.md  PAPER_STRUCTURE_AND_JOURNAL_STRATEGY.md  PHASE1_ACCEPTANCE.md  PHASE2B_ACCEPTANCE.md  PHASE2B_PROTOCOL.md  PHASE2C_CONFIRMATION.md  PHASE2C_DEVELOPMENT.md  PHASE2C_PROTOCOL.md  PHASE2_ACCEPTANCE.md  PHASE2_PROTOCOL.md  PHASE3_CONFIRMATION.md  PHASE3_DEVELOPMENT.md  PHASE3_PROTOCOL.md  PHASE4_IDENTIFIABILITY.md  PHASE4_PROTOCOL.md  PHASE5_DYNAMIC_SENSORIUM_ADAPTER.md  PHASE5_DYNAMIC_SENSORIUM_RESULTS.md  PHASE5_SENSORIUM_PROTOCOL.md  PHASE5_SENSORIUM_REAL_RESULTS.md  (+17 more)
envs/: README.md  allen.md  core.md  ibl.md
mousebrainbench/: __init__.py  artifacts.py  cli.py  config.py  empirical.py  schemas.py
neurotwin_mvp/: __init__.py  agents.py  allen_normalization.py  allen_selection.py  artifacts.py  audit.py  baselines.py  behavioral_targets.py  benchmark.py  cli.py  config.py  control_analysis.py  data.py  evidence.py  experiments.py  functional_graph.py  generative.py  knowledge.py  latent.py  metrics.py  microcircuit.py  regional_model.py  registry.py  scientific_agent.py  stability.py  workflow.py
notebooks/: 01_build_connectome.ipynb  02_run_mesoscopic_simulation.ipynb  03_validate_against_reference.ipynb
paper/: README.md  cas-common.sty  cas-sc.cls  highlights.tex  main.tex  main_anonymous.tex  references.bib  title-page.tex
results/: allen_vbn_mechanistic_identifiability_score.json  gate2a_social_survival.csv  gate2b_social_inference.csv  gate2c_advisor_memory.csv  gate2d_confirmation.csv  gate2d_development_scores.csv  gate2d_frozen_confirmation.json  gate2e_advisor_references.csv  gate2f_markov_control.csv  gate2f_policy_truth_table.csv  phase2c_confirmation_metrics.json  phase2c_confirmation_sessions.csv  phase3_confirmation_metrics.json  phase3_confirmation_sessions.csv  phase3_development_summary.json  phase4_identifiability_metrics.json  phase4_identifiability_sessions.csv  sensorium_predictive_mis_benchmark.json  synthetic_identifiability_benchmark.json
scripts/: allen_export_session.py  allen_metadata_smoke_test.py  analyze_allen_animal_aware_validation.py  analyze_allen_blocked_fixed_validation.py  analyze_allen_cross_session_uncertainty.py  analyze_allen_direct_state_anatomy.py  analyze_allen_fragile_alternative_windows.py  analyze_allen_fragile_sessions.py  analyze_allen_fragility_explanations.py  analyze_allen_hierarchical_heterogeneity.py  analyze_allen_recording_coverage.py  analyze_allen_response_controls.py  analyze_allen_session_relations.py  analyze_allen_state_adjusted_signal.py  analyze_allen_temporal_falsification.py  analyze_allen_within_session_states.py  audit_external_replication_readiness.py  audit_session_artifact.py  benchmark_session_artifact.py  build_allen_functional_graph.py  build_allen_graph_evidence_registry.py  build_allen_stability_matrix.py  build_eaai_manuscript.py  build_microns_q1_package.py  build_microns_static_pilot_manifest.py  build_plos_manuscript.py  check_apple_mps.py  check_dataset_adapters.py  compare_dynamic_sensorium_models.py  compare_sensorium_static_results.py  diagnose_saved_learning_gate.py  download_allen_confirmation.py  download_allen_visual_connectivity.py  download_microns_static_small.sh  export_allen_sessions_batch.py  export_allen_state_anatomy.py  export_synthetic_session_artifact.py  export_until_target_evidence.py  (+44 more)
tests/: test_mvp.py  (+53 more)
(+212 files in other folders)
