[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mousebrainbench"
version = "0.6.0"
description = "Reproducible benchmarking for lightweight mesoscopic mouse-brain models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "h5py>=3.12,<4",
  "matplotlib>=3.8,<4",
  "networkx>=3.2,<4",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pyyaml>=6,<7",
  "scipy>=1.12,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.9,<1",
]
legacy-cognitive = [
  "gymnasium>=1.0,<2",
  "sb3-contrib>=2.5,<3",
  "stable-baselines3>=2.5,<3",
  "torch>=2.5,<3",
]

[project.scripts]
mousebrainbench-allen-benchmark = "mousebrainbench.benchmarks.allen_vbn:main"
mousebrainbench-allen-phase2b = "mousebrainbench.benchmarks.allen_vbn_phase2b:main"
mousebrainbench-allen-phase2c = "mousebrainbench.benchmarks.allen_vbn_phase2c:main"
mousebrainbench-allen-phase3 = "mousebrainbench.benchmarks.allen_visual_phase3:main"
mousebrainbench-allen-phase4 = "mousebrainbench.benchmarks.allen_vbn_phase4:main"
mousebrainbench-allen-mis = "mousebrainbench.benchmarks.allen_vbn_mis:main"
mousebrainbench-sensorium-mis = "mousebrainbench.benchmarks.sensorium_predictive_mis:main"
mousebrainbench-sensorium-compare = "mousebrainbench.benchmarks.sensorium_model_comparator:main"
mousebrainbench-sensorium-smoke = "mousebrainbench.benchmarks.sensorium_synthetic_smoke:main"
mousebrainbench-sensorium-official-audit = "mousebrainbench.benchmarks.sensorium_official_baseline_audit:main"
mousebrainbench-q1-sensitivity = "mousebrainbench.benchmarks.q1_sensitivity:main"
mousebrainbench-microns-gate = "mousebrainbench.benchmarks.microns_pilot_gate:main"
mousebrainbench-publication-freeze = "mousebrainbench.benchmarks.publication_freeze:main"
mousebrainbench-synthetic-mis = "mousebrainbench.benchmarks.synthetic_identifiability:main"
mousebrainbench-run = "mousebrainbench.cli:main"

[tool.setuptools.packages.find]
include = ["mousebrainbench*", "cognitive_organism*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
